Fix: removed padding: made the buttons not center aligned

--- a/assets/stylesheets/layout/_masterbar.scss
+++ b/assets/stylesheets/layout/_masterbar.scss
@@ -42,7 +42,7 @@ $autobar-height: 20px;
 
 	.masterbar__item-content {
 		color: $white;
-		padding: 0 6px;
+		padding: 0 0 0 6px;
 	}
 
 	&:hover,
